@@ -60,48 +60,47 @@ public final class R {
         public static final int vegetarian=0x7f02000f;
     }
     public static final class id {
-        public static final int about=0x7f0b0027;
+        public static final int about=0x7f0b0026;
         public static final int action_viewbylocation_spinnertext=0x7f0b0007;
         public static final int app_info=0x7f0b0003;
         public static final int app_name=0x7f0b0000;
         public static final int credits_authors=0x7f0b0006;
         public static final int credits_categories=0x7f0b0005;
-        public static final int firsttime_nuts=0x7f0b0014;
-        public static final int firsttime_pork=0x7f0b0013;
-        public static final int firsttime_vegan=0x7f0b0011;
-        public static final int firsttime_veget=0x7f0b0012;
-        public static final int gotocurrentmeal=0x7f0b0028;
-        public static final int gototoday=0x7f0b0023;
+        public static final int firsttime_nuts=0x7f0b0013;
+        public static final int firsttime_pork=0x7f0b0012;
+        public static final int firsttime_vegan=0x7f0b0010;
+        public static final int firsttime_veget=0x7f0b0011;
+        public static final int gotocurrentmeal=0x7f0b0027;
+        public static final int gototoday=0x7f0b0022;
         public static final int hr1=0x7f0b0002;
         public static final int hr2=0x7f0b0004;
-        public static final int infobar=0x7f0b000b;
-        public static final int infobar_mealinfo0=0x7f0b000c;
-        public static final int infobar_mealinfo1=0x7f0b000d;
-        public static final int itemname=0x7f0b0017;
-        public static final int jumptodate=0x7f0b0026;
-        public static final int leftbar=0x7f0b0010;
-        public static final int legend=0x7f0b0025;
-        public static final int listview_pager=0x7f0b000e;
-        public static final int loading_text=0x7f0b0009;
-        public static final int nuts=0x7f0b001a;
-        public static final int pageindicators=0x7f0b000f;
-        public static final int pork=0x7f0b0019;
-        public static final int refresh=0x7f0b002a;
-        public static final int refreshicon=0x7f0b0015;
-        public static final int reorder=0x7f0b0029;
-        public static final int reorder_container=0x7f0b000a;
-        public static final int reorder_name=0x7f0b001d;
-        public static final int reorder_selector=0x7f0b001e;
-        public static final int search=0x7f0b0024;
-        public static final int searchresults_title=0x7f0b0008;
-        public static final int sectionextra=0x7f0b001c;
-        public static final int sectiontitle=0x7f0b001b;
-        public static final int text1=0x7f0b001f;
-        public static final int text2=0x7f0b0020;
-        public static final int text3=0x7f0b0021;
-        public static final int text4=0x7f0b0022;
-        public static final int title=0x7f0b0016;
-        public static final int vegan_vegetarian=0x7f0b0018;
+        public static final int infobar=0x7f0b000a;
+        public static final int infobar_mealinfo0=0x7f0b000b;
+        public static final int infobar_mealinfo1=0x7f0b000c;
+        public static final int itemname=0x7f0b0016;
+        public static final int jumptodate=0x7f0b0025;
+        public static final int leftbar=0x7f0b000f;
+        public static final int legend=0x7f0b0024;
+        public static final int listview_pager=0x7f0b000d;
+        public static final int loading_text=0x7f0b0008;
+        public static final int nuts=0x7f0b0019;
+        public static final int pageindicators=0x7f0b000e;
+        public static final int pork=0x7f0b0018;
+        public static final int refresh=0x7f0b0029;
+        public static final int refreshicon=0x7f0b0014;
+        public static final int reorder=0x7f0b0028;
+        public static final int reorder_container=0x7f0b0009;
+        public static final int reorder_name=0x7f0b001c;
+        public static final int reorder_selector=0x7f0b001d;
+        public static final int result_date=0x7f0b0021;
+        public static final int search=0x7f0b0023;
+        public static final int sectionextra=0x7f0b001b;
+        public static final int sectiontitle=0x7f0b001a;
+        public static final int text1=0x7f0b001e;
+        public static final int text2=0x7f0b001f;
+        public static final int text3=0x7f0b0020;
+        public static final int title=0x7f0b0015;
+        public static final int vegan_vegetarian=0x7f0b0017;
         public static final int version=0x7f0b0001;
     }
     public static final class layout {
@@ -123,6 +122,7 @@ public final class R {
         public static final int refresh_icon=0x7f03000f;
         public static final int reorder_name=0x7f030010;
         public static final int searchresult=0x7f030011;
+        public static final int searchresult_date=0x7f030012;
     }
     public static final class menu {
         public static final int activity_meal_searcher=0x7f0a0000;
