@@ -5,20 +5,6 @@
     android:orientation="vertical"
     tools:context=".MealSearcher" >
     
-    <TextView
-        android:id="@+id/searchresults_title"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="left"
-	    android:background="@android:color/black"
-        android:textStyle="bold"
-        android:textColor="@color/sectiontitle"
-        android:textSize="20sp"
-        android:paddingTop="2dp"
-        android:paddingBottom="2dp"
-        android:paddingLeft="10dp"
-        />
-    
     <ListView
         android:id="@android:id/list"
         android:layout_width="match_parent"
