@@ -2,8 +2,9 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingLeft="10dp"
+    android:paddingLeft="12dp"
     android:paddingRight="10dp"
+    android:paddingBottom="1dp"
     android:background="@color/menuitem"
     >
     
@@ -28,22 +29,12 @@
     
     <TextView
         android:id="@+id/text3"
+        android:textSize="12sp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="12sp"
         android:paddingLeft="10dp"
-        android:paddingRight="10dp"
-        android:gravity="left"
+        android:gravity="right"
         android:layout_toRightOf="@id/text2"
-        android:layout_toLeftOf="@+id/text4"
-        android:layout_alignParentBottom="true"
-        />
-    
-    <TextView
-        android:id="@id/text4"
-        android:textSize="12sp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
         android:layout_alignParentBottom="true"
         />
